# FileLinkFucker

./: .env.example  Dockerfile  Procfile  README.md  heroku.yml  pyproject.toml  requirements.txt
api/: main.py
bot/: __init__.py  client.py  config.py  main.py  texts.py
bot/database/: db.py
bot/handlers/: __init__.py  admin.py  file_ingest_flow.py  flow_wiring.py  fsub_verify.py  help_about.py  link_delivery.py  link_detect.py  link_ingest_flow.py  link_process.py  password_capture.py  password_prompt.py  start.py  upload.py
bot/services/: ingest.py  links.py  storage.py
bot/services/extractors/: base.py  direct.py  router.py  telegram.py
bot/utils/: fsub.py  identity.py  logger.py  passwords.py
